...
    private lazy var loginButton: UIButton = {
        
        let button = UIButton()
        
        button.backgroundColor = UIColor(named: "YP_White")
        button.setTitleColor(UIColor(named: "YP_Black"), for: .normal)
        button.accessibilityIdentifier = "Authenticate"
        button.titleLabel?.font = UIFont.systemFont(ofSize: 17, weight: UIFont.Weight.bold)
        button.setTitle("Войти", for: .normal)
        button.setValue(true, forKeyPath: "layer.masksToBounds")
        button.setValue(16, forKeyPath: "layer.cornerRadius")
        button.addTarget(self, action: #selector(didTapLoginButton), for: .touchUpInside)
        
...
